--- a/client/src/components/searchBar/searchBar.scss
+++ b/client/src/components/searchBar/searchBar.scss
@@ -1,6 +1,8 @@
 @import "../../responsive.scss";
 
 .searchBar {
+  position: relative;
+  z-index: 1;
   .type {
     button {
       padding: 16px 36px;
