--- a/client/src/routes/homePage/homePage.scss
+++ b/client/src/routes/homePage/homePage.scss
@@ -3,6 +3,10 @@
 .homePage {
   display: flex;
   height: 100%;
+  position: relative;
+  z-index: 1;
+  background-color: #09090b;
+  color: #ffffff;
 
   .textContainer {
     flex: 3;
@@ -15,24 +19,32 @@
       gap: 50px;
       height: 100%;
 
-      @include lg{
+      @include lg {
         padding-right: 50px;
       }
 
-      @include md{
+      @include md {
         padding: 0;
       }
 
-      @include sm{
+      @include sm {
         justify-content: flex-start;
       }
 
       .title {
         font-size: 64px;
+        color: #ffffff;
 
         @include lg {
           font-size: 48px;
         }
+      }
+
+      .search-container {
+        margin: 20px 0;
+        display: flex;
+        justify-content: center;
+        width: 100%;
       }
 
       .boxes {
@@ -45,6 +57,7 @@
 
         h1 {
           font-size: 36px;
+          color: #ffffff;
 
           @include lg {
             font-size: 32px;
@@ -54,6 +67,7 @@
         h2 {
           font-size: 20px;
           font-weight: 300;
+          color: #e2e8f0;
         }
       }
     }
@@ -61,23 +75,26 @@
 
   .imgContainer {
     flex: 2;
-    background-color: #fcf5f3;
+    background: linear-gradient(135deg, #1a1a1f 0%, #2d2d35 100%);
     position: relative;
     display: flex;
     align-items: center;
+    justify-content: center;
+    overflow: hidden;
 
     @include md {
       display: none;
     }
 
     img {
-      width: 115%;
-      position: absolute;
-      right: 0;
-
-      @include lg {
-        width: 105%;
-      }
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+      position: relative;
+      right: auto;
+      top: auto;
+      transform: none;
+      z-index: 1;
     }
   }
 }
