--- a/client/src/routes/layout/layout.scss
+++ b/client/src/routes/layout/layout.scss
@@ -1,7 +1,7 @@
 @import "../../responsive.scss";
 
 .layout {
-  height: 100vh;
+  min-height: 100vh;
   max-width: 1366px;
   margin-left: auto;
   margin-right: auto;
@@ -9,24 +9,38 @@
   padding-right: 20px;
   display: flex;
   flex-direction: column;
+  background-color: #09090b;
+  color: #ffffff;
 
   @include lg {
-    // background-color: rgb(247, 210, 196);
     max-width: 1280px;
   }
 
   @include md {
-    // background-color: rgb(186, 203, 234);
     max-width: 768px;
+    padding-left: 10px;
+    padding-right: 10px;
   }
 
   @include sm {
-    // background-color: rgb(239, 200, 200);
-    max-width: 640px;
+    max-width: 100%;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .navbar {
+    position: relative;
+    z-index: 1;
   }
 
   .content {
-    // flex: 1;
-    height: calc(100vh - 100px);
+    flex: 1;
+    min-height: calc(100vh - 100px);
+    position: relative;
+    z-index: 1;
+
+    @include sm {
+      min-height: calc(100vh - 80px);
+    }
   }
 }
