--- a/client/src/routes/login/login.scss
+++ b/client/src/routes/login/login.scss
@@ -1,3 +1,5 @@
+@import "../../responsive.scss";
+
 .login {
   height: 100%;
   display: flex;
@@ -13,11 +15,15 @@
       display: flex;
       flex-direction: column;
       gap: 20px;
+      width: 100%;
+      max-width: 400px;
+      padding: 20px;
 
       input{
         padding: 20px;
         border: 1px solid gray;
         border-radius: 5px;
+        font-size: 16px; // Prevent zoom on mobile
       }
 
       button{
@@ -28,6 +34,7 @@
         color: white;
         font-weight: bold;
         cursor: pointer;
+        font-size: 16px;
 
         &:disabled{
           background-color: #BED9D8;
@@ -54,8 +61,36 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    
     img {
       width: 100%;
+    }
+
+    @include md {
+      display: none; // Hide image on tablet and mobile
+    }
+  }
+
+  @include sm {
+    flex-direction: column;
+    height: 100vh;
+    
+    .formContainer {
+      flex: 1;
+      padding: 10px;
+      
+      form {
+        max-width: 100%;
+        padding: 10px;
+        
+        input {
+          padding: 15px;
+        }
+        
+        button {
+          padding: 15px;
+        }
+      }
     }
   }
 }
