--- a/client/src/routes/profilePage/profilePage.scss
+++ b/client/src/routes/profilePage/profilePage.scss
@@ -75,10 +75,13 @@
   }
   .chatContainer {
     flex: 2;
-    background-color: #fcf5f3;
+    background-color: #2c3e50;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
+    border-radius: 15px;
+    margin: 10px;
+    overflow: hidden;
 
     @include md {
       flex: none;
