--- a/client/src/components/card/card.scss
+++ b/client/src/components/card/card.scss
@@ -34,11 +34,11 @@
     .title {
       font-size: 20px;
       font-weight: 600;
-      color: #444;
+      color: #888;
       transition: all 0.4s ease;
 
       &:hover {
-        color: #000;
+        color: #666;
         scale: 1.01;
       }
     }
@@ -74,9 +74,14 @@
           display: flex;
           align-items: center;
           gap: 5px;
-          background-color: whitesmoke;
+          background-color: #2c3e50;
+          color: white;
           padding: 5px;
           border-radius: 5px;
+
+          img {
+            filter: brightness(0) invert(1);
+          }
         }
       }
 
@@ -93,8 +98,16 @@
           align-items: center;
           justify-content: center;
 
+          img {
+            filter: brightness(0) invert(1);
+          }
+
           &:hover {
             background-color: lightgray;
+
+            img {
+              filter: none;
+            }
           }
         }
       }
