Revert logout button to original simple design - Remove shadcn/ui components and dependencies - Remove ButtonCta component - Restore original button styling - Clean up all outline removal attempts

--- a/client/src/routes/profilePage/profilePage.scss
+++ b/client/src/routes/profilePage/profilePage.scss
@@ -101,3 +101,19 @@
     }
   }
 }
+
+// Remove outline from ButtonCta
+:global(.group) {
+  outline: none !important;
+  box-shadow: none !important;
+
+  &:focus {
+    outline: none !important;
+    box-shadow: none !important;
+  }
+
+  &:focus-visible {
+    outline: none !important;
+    box-shadow: none !important;
+  }
+}
