--- a/client/src/components/navbar/navbar.scss
+++ b/client/src/components/navbar/navbar.scss
@@ -135,8 +135,10 @@ nav {
       .profile {
         padding: 12px 24px;
         background-color: #fece51;
+        color: #333;
         cursor: pointer;
         border: none;
+        border-radius: 8px;
         position: relative;
 
         .notification {
