--- a/client/src/components/navbar/navbar.scss
+++ b/client/src/components/navbar/navbar.scss
@@ -197,22 +197,23 @@ nav {
     }
 
     .menu {
-      position: absolute;
+      position: fixed;
       top: 0;
-      right: -50%;
+      left: -100%;
       background-color: #09090b;
       color: white;
       height: 100vh;
-      width: 50%;
-      transition: all 1s ease;
+      width: 100%;
+      transition: all 0.4s ease;
       display: none;
       flex-direction: column;
       align-items: center;
       justify-content: center;
       font-size: 24px;
+      z-index: 998;
 
       &.active {
-        right: 0;
+        left: 0;
       }
 
       @include sm {
