--- a/client/src/components/navbar/navbar.scss
+++ b/client/src/components/navbar/navbar.scss
@@ -199,26 +199,27 @@ nav {
     .menu {
       position: fixed;
       top: 0;
-      left: -100%;
+      right: -50%; // منو بیرون صفحه، سمت راست
+      width: 50%;
+      height: 100vh;
       background-color: #09090b;
       color: white;
-      height: 100vh;
-      width: 100%;
-      transition: all 0.4s ease;
-      display: none;
+      display: flex; // همیشه flex باشد
       flex-direction: column;
       align-items: center;
       justify-content: center;
       font-size: 24px;
-      z-index: 998;
+      transition: right 0.5s ease; // فقط right انیمیت شود
+      opacity: 0; // مخفی
+      pointer-events: none; // کلیک‌پذیر نباشد
 
       &.active {
-        left: 0;
+        right: 0; // وارد صفحه شود
+        opacity: 1; // دیده شود
+        pointer-events: auto;
       }
 
       @include sm {
-        display: flex;
-
         a {
           display: initial;
           cursor: pointer;
