--- a/client/src/components/navbar/navbar.scss
+++ b/client/src/components/navbar/navbar.scss
@@ -197,27 +197,23 @@ nav {
     }
 
     .menu {
-      position: fixed; // مهم
+      position: fixed;
       top: 0;
-      right: -50%;
-      width: 50%;
+      right: -100%;
+      width: 100%;
       height: 100vh;
-      background-color: #09090b;
+      background-color: rgba(9, 9, 11, 0.95);
       color: white;
-      display: flex; // همیشه flex
+      display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
       font-size: 24px;
-      transition: right 0.5s ease;
-      opacity: 0;
-      pointer-events: none;
-      z-index: 9999; // مهم‌ترین بخش
+      transition: right 0.4s ease;
+      z-index: 9999;
 
       &.active {
         right: 0;
-        opacity: 1;
-        pointer-events: auto;
       }
 
       @include sm {
