--- a/client/src/components/navbar/navbar.scss
+++ b/client/src/components/navbar/navbar.scss
@@ -199,10 +199,10 @@ nav {
     .menu {
       position: fixed;
       top: 0;
-      right: -100%;
-      width: 100%;
+      right: -80%;
+      width: 80%;
       height: 100vh;
-      background-color: rgba(9, 9, 11, 0.95);
+      background-color: rgba(9, 9, 11, 0.98);
       color: white;
       display: flex;
       flex-direction: column;
@@ -210,14 +210,10 @@ nav {
       justify-content: center;
       font-size: 24px;
       transition: right 0.4s ease;
-      z-index: 999999; // خیلی مهم
-      pointer-events: none;
-      opacity: 0;
+      z-index: 999999;
 
       &.active {
         right: 0;
-        opacity: 1;
-        pointer-events: auto;
       }
 
       @include sm {
@@ -226,7 +222,8 @@ nav {
           cursor: pointer;
           text-decoration: none;
           color: white;
-          padding: 10px 0;
+          padding: 20px 0;
+          font-size: 18px;
         }
       }
     }
